@@ -29,7 +29,7 @@ org.scala-lang              scala-library            | 2.11.8  | [BSD 3-Clause](
 org.scala-lang              scala-reflect            | 2.11.1  | [BSD 3-Clause](http://www.scala-lang.org/license.html)
 jline                       jline                    | 2.13    | [The BSD License](https://github.com/jline/jline2/blob/master/LICENSE.txt)
 com.github.scopt            scopt_2.11               | 3.3.0   | [MIT License](http://www.opensource.org/licenses/mit-license)
-io.cucumber                 gherkin3                 | 3.1.2   | [MIT License](http://www.opensource.org/licenses/mit-license)
+io.cucumber                 gherkin                  | 4.0.0   | [MIT License](http://www.opensource.org/licenses/mit-license)
 org.slf4j                   slf4j-api                | 1.7.16  | [MIT License](http://www.slf4j.org/license.html)
 org.slf4j                   slf4j-log4j12            | 1.7.7   | [MIT License](http://www.slf4j.org/license.html)
 Twitter, Inc                Bootstrap                | 3.3.6   | [MIT License](https://github.com/twbs/bootstrap/blob/master/LICENSE)
