@@ -34,7 +34,7 @@ javaSource in Test := baseDirectory.value / "src/test/scala"
 
 resolvers += "Typesafe Repo" at "http://repo.typesafe.com/typesafe/releases/"
 
-libraryDependencies += "io.cucumber" % "gherkin3" % "3.1.2"
+libraryDependencies += "io.cucumber" % "gherkin" % "4.0.0"
 
 libraryDependencies += "com.typesafe.play" %% "play-json" % "2.3.9"
 
