@@ -13,6 +13,7 @@ Aug 25, 2016, 12:55 AM GMT+10 (AEST)
 - Use flash scope to track changes made to global attributes in local scopes
 - wrap long text in reports
 - store atts as list of nvp tuples instaed of json
+- update gherkin parser from v3.1.2 to v4.0.0
 
 1.3.4
 =====
